--- a/src/app/modules/auth/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/sign-up/sign-up.component.html
@@ -1,41 +1,28 @@
-<div
-    class="flex min-w-0 flex-auto flex-col items-center sm:flex-row sm:justify-center md:items-start md:justify-start"
->
+<div class="flex min-w-0 flex-auto flex-col items-center sm:flex-row sm:justify-center md:items-start md:justify-start">
     <div
-        class="w-full px-4 py-8 sm:bg-card sm:w-auto sm:rounded-2xl sm:p-12 sm:shadow md:flex md:h-full md:w-1/2 md:items-center md:justify-end md:rounded-none md:p-16 md:shadow-none"
-    >
+        class="w-full px-4 py-8 sm:bg-card sm:w-auto sm:rounded-2xl sm:p-12 sm:shadow md:flex md:h-full md:w-1/2 md:items-center md:justify-end md:rounded-none md:p-16 md:shadow-none">
         <div class="mx-auto w-full max-w-80 sm:mx-0 sm:w-80">
             <!-- Logo -->
             <div class="w-12">
-                <img src="images/logo/logo.svg" />
+                <img src="images/logo/logo.svg" alt="SMG logo" />
             </div>
 
             <!-- Title -->
-            <div
-                class="mt-8 text-4xl font-extrabold leading-tight tracking-tight"
-            >
+            <div class="mt-8 text-4xl font-extrabold leading-tight tracking-tight">
                 S'inscrire
             </div>
             <div class="mt-0.5 flex items-baseline font-medium">
                 <div>Vous avez déjà un compte ?</div>
-                <a
-                    class="ml-1 text-primary-500 hover:underline"
-                    [routerLink]="['/sign-in']"
-                    >Se connecter
+                <a class="ml-1 text-primary-500 hover:underline" [routerLink]="['/sign-in']">Se connecter
                 </a>
             </div>
 
             <!-- Alert -->
             @if (showAlert) {
-                <fuse-alert
-                    class="mt-8"
-                    [appearance]="'outline'"
-                    [showIcon]="false"
-                    [type]="alert.type"
-                    [@shake]="alert.type === 'error'"
-                >
-                    {{ alert.message }}
-                </fuse-alert>
+            <fuse-alert class="mt-8" [appearance]="'outline'" [showIcon]="false" [type]="alert.type"
+                [@shake]="alert.type === 'error'">
+                {{ alert.message }}
+            </fuse-alert>
             }
 
             <!-- Sign Up form -->
@@ -45,7 +32,7 @@
                     <mat-label>Nom complet</mat-label>
                     <input id="nom" matInput [formControlName]="'nom'" />
                     @if (signUpForm.get('nom').hasError('required')) {
-                        <mat-error> Le nom complet est requis. </mat-error>
+                    <mat-error> Le nom complet est requis. </mat-error>
                     }
                 </mat-form-field>
 
@@ -54,46 +41,29 @@
                     <mat-label>Adresse e-mail</mat-label>
                     <input id="email" matInput [formControlName]="'email'" />
                     @if (signUpForm.get('email').hasError('required')) {
-                        <mat-error> L'adresse e-mail est requise. </mat-error>
+                    <mat-error> L'adresse e-mail est requise. </mat-error>
                     }
                     @if (signUpForm.get('email').hasError('email')) {
-                        <mat-error>
-                            Veuillez entrer une adresse e-mail valide.
-                        </mat-error>
+                    <mat-error>
+                        Veuillez entrer une adresse e-mail valide.
+                    </mat-error>
                     }
                 </mat-form-field>
 
                 <!-- Password field -->
                 <mat-form-field class="w-full">
                     <mat-label>Mot de passe</mat-label>
-                    <input
-                        id="password"
-                        matInput
-                        type="password"
-                        [formControlName]="'password'"
-                        #passwordField
-                    />
-                    <button
-                        mat-icon-button
-                        type="button"
-                        (click)="
+                    <input id="password" matInput type="password" [formControlName]="'password'" #passwordField />
+                    <button mat-icon-button type="button" (click)="
                             passwordField.type === 'password'
                                 ? (passwordField.type = 'text')
                                 : (passwordField.type = 'password')
-                        "
-                        matSuffix
-                    >
+                        " matSuffix>
                         @if (passwordField.type === 'password') {
-                            <mat-icon
-                                class="icon-size-5"
-                                [svgIcon]="'heroicons_solid:eye'"
-                            ></mat-icon>
+                        <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:eye'"></mat-icon>
                         }
                         @if (passwordField.type === 'text') {
-                            <mat-icon
-                                class="icon-size-5"
-                                [svgIcon]="'heroicons_solid:eye-slash'"
-                            ></mat-icon>
+                        <mat-icon class="icon-size-5" [svgIcon]="'heroicons_solid:eye-slash'"></mat-icon>
                         }
                     </button>
                     <mat-error> Le mot de passe est requis. </mat-error>
@@ -104,18 +74,14 @@
                     <mat-label>Adresse</mat-label>
                     <input id="adresse" matInput [formControlName]="'adresse'" />
                     @if (signUpForm.get('adresse').hasError('required')) {
-                        <mat-error> L'adresse est requise. </mat-error>
+                    <mat-error> L'adresse est requise. </mat-error>
                     }
                 </mat-form-field>
 
                 <!-- tel1 field -->
                 <mat-form-field class="w-full">
                     <mat-label>Numero Fixe</mat-label>
-                    <input
-                        id="tel1"
-                        matInput
-                        [formControlName]="'tel1'"
-                    />
+                    <input id="tel1" matInput [formControlName]="'tel1'" />
                 </mat-form-field>
 
                 <!-- tel2 field -->
@@ -123,7 +89,7 @@
                     <mat-label>Numero Mobile</mat-label>
                     <input id="tel2" matInput [formControlName]="'tel2'" />
                     @if (signUpForm.get('tel2').hasError('required')) {
-                        <mat-error> Le numero mobile est requis. </mat-error>
+                    <mat-error> Le numero mobile est requis. </mat-error>
                     }
                 </mat-form-field>
 
@@ -138,77 +104,62 @@
                     <mat-label>Identifiant Fiscal</mat-label>
                     <input id="idfiscal" matInput [formControlName]="'idfiscal'" />
                     @if (signUpForm.get('idfiscal').hasError('required')) {
-                        <mat-error> L'identifiant fiscal est requis. </mat-error>
+                    <mat-error> L'identifiant fiscal est requis. </mat-error>
                     }
                 </mat-form-field>
 
                 <!-- mat field -->
                 <mat-form-field class="w-full">
                     <mat-label>Matricule</mat-label>
-                    <input type="file"  #fileInput id="mat" (change)="onFileSelected($event)" accept="image/*" style="display: none;" />
-                    <input type="text" id="mat" matInput [formControlName]="'mat'" [value]="selectedImageUrl" style="display: none;"/>
+                    <input type="file" #fileInput id="mat" (change)="onFileSelected($event)" accept="image/*"
+                        style="display: none;" />
+                    <input type="text" id="mat" matInput [formControlName]="'mat'" [value]="selectedImageUrl"
+                        style="display: none;" />
                     <button mat-button (click)="fileInput.click()">Télécharger une image</button>
                     @if(selectedImageUrl){
                     <div style="margin-top: 10px;">
-                        <img [src]="selectedImageUrl" alt="Matricule Image Preview" style="max-width: 100%; max-height: 200px; object-fit: cover;"/>
+                        <img [src]="selectedImageUrl" alt="Matricule Image Preview"
+                            style="max-width: 100%; max-height: 200px; object-fit: cover;" />
                     </div>
                     }
                     @if (!isPhotoSelected) {
-                        <mat-error> Matricule est requise. </mat-error>
+                    <mat-error> Matricule est requise. </mat-error>
                     }
                 </mat-form-field>
 
                 <!-- ToS and PP -->
                 <div class="mt-1.5 inline-flex w-full items-end">
-                    <mat-checkbox
-                        class="-ml-2"
-                        [color]="'primary'"
-                        [formControlName]="'agreements'"
-                    >
+                    <mat-checkbox class="-ml-2" [color]="'primary'" [formControlName]="'agreements'">
                         <span>J'accepte les</span>
-                        <a
-                            class="ml-1 text-primary-500 hover:underline"
-                            [routerLink]="['./']"
-                            >Termes
+                        <a class="ml-1 text-primary-500 hover:underline" [routerLink]="['./']">Termes
                         </a>
                         <span>et</span>
-                        <a
-                            class="ml-1 text-primary-500 hover:underline"
-                            [routerLink]="['./']"
-                            >Politique de confidentialité
+                        <a class="ml-1 text-primary-500 hover:underline" [routerLink]="['./']">Politique de
+                            confidentialité
                         </a>
                     </mat-checkbox>
                 </div>
 
                 <!-- Submit button -->
-                <button
-                    class="fuse-mat-button-large mt-6 w-full"
-                    mat-flat-button
-                    [color]="'primary'"
-                    [disabled]="signUpForm.disabled"
-                    (click)="signUp()"
-                >
+                <button class="fuse-mat-button-large mt-6 w-full" mat-flat-button [color]="'primary'"
+                    [disabled]="signUpForm.disabled" (click)="signUp()">
                     @if (!signUpForm.disabled) {
-                        <span> Créez votre compte gratuit </span>
+                    <span> Créez votre compte gratuit </span>
                     }
                     @if (signUpForm.disabled) {
-                        <mat-progress-spinner
-                            [diameter]="24"
-                            [mode]="'indeterminate'"
-                        ></mat-progress-spinner>
+                    <mat-progress-spinner [diameter]="24" [mode]="'indeterminate'"></mat-progress-spinner>
                     }
                 </button>
             </form>
         </div>
     </div>
     <div
-        class="relative hidden h-full w-1/2 flex-auto items-center justify-center overflow-hidden bg-gray-800 p-16 dark:border-l md:flex lg:px-28"
-    >
+        class="relative hidden h-full w-1/2 flex-auto items-center justify-center overflow-hidden bg-gray-800 p-16 dark:border-l md:flex lg:px-28">
         <!-- Background -->
         <!-- Rings -->
         <!-- prettier-ignore -->
-        <svg class="absolute inset-0 pointer-events-none"
-             viewBox="0 0 960 540" width="100%" height="100%" preserveAspectRatio="xMidYMax slice" xmlns="http://www.w3.org/2000/svg">
+        <svg class="absolute inset-0 pointer-events-none" viewBox="0 0 960 540" width="100%" height="100%"
+            preserveAspectRatio="xMidYMax slice" xmlns="http://www.w3.org/2000/svg">
             <g class="text-gray-700 opacity-25" fill="none" stroke="currentColor" stroke-width="100">
                 <circle r="234" cx="196" cy="23"></circle>
                 <circle r="234" cx="790" cy="491"></circle>
@@ -216,10 +167,11 @@
         </svg>
         <!-- Dots -->
         <!-- prettier-ignore -->
-        <svg class="absolute -top-16 -right-16 text-gray-700"
-             viewBox="0 0 220 192" width="220" height="192" fill="none">
+        <svg class="absolute -top-16 -right-16 text-gray-700" viewBox="0 0 220 192" width="220" height="192"
+            fill="none">
             <defs>
-                <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+                <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20"
+                    patternUnits="userSpaceOnUse">
                     <rect x="0" y="0" width="4" height="4" fill="currentColor"></rect>
                 </pattern>
             </defs>
